# shuttlings-cch24

./: .env  .gitignore  Cargo.toml  flake.nix
.sqlx/: query-abb3a320245cfc323063fc3c23512320d445a7e3787c7249a8b32504e80b5e4b.json
migrations/: 20241219130825_quotes.sql
src/: day00.rs  day02.rs  day05.rs  day09.rs  day12.rs  day16.rs  day19.rs  main.rs
