[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
cargo-manifest = "0.17.0"
mime = "0.3.17"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
serde_yml = "0.0.12"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.42.0"
toml = "0.8.19"
