[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
cargo-manifest = "0.17.0"
lazy_static = "1.5.0"
leaky-bucket = "1.1.2"
mime = "0.3.17"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["arbitrary_precision"] }
serde_with = "3.11.0"
serde_yml = "0.0.12"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
toml = "0.8.19"
tracing = "0.1.41"
