[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
cargo-manifest = "0.17.0"
lazy_static = "1.5.0"
leaky-bucket = "1.1.2"
mime = "0.3.17"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
serde_yml = "0.0.12"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
toml = "0.8.19"
tracing = "0.1.41"
